# reinforcement_learning

./: .gitignore  CMakeLists.txt  matplotlibcpp.hpp
blackjack/: CMakeLists.txt  blackjack.hpp  main.cpp  reinforce_alg.cpp
cartpole/: REINFORCE_cartpole.ipynb  cartpole.hpp  nn.cpp
gambler/: CMakeLists.txt  main.cpp
grid_wind_world/: CMakeLists.txt  grid_wind_world.hpp  main.cpp
jacks_rental_car/: CMakeLists.txt  ext_main.cpp  main.cpp  plot.cpp
k-armed-bandit/: CMakeLists.txt  k_armed_bandit.hpp  main.cpp
torch/cartpole/: 1_dqn.py  2_ddqn.py  3_dueling_network.py  4_noisy_network.py  5_prioritized_replay.py
